<resources>
    <string name="app_name">Diplomski</string>
    <string name="overview">Pregled</string>
    <string name="login">Prijava</string>
    <string name="reservations">Rezervisanje</string>
    <string name="room26">26</string>
    <string name="room25">25</string>
    <string name="room26B">26B</string>
    <string name="room60">60</string>
    <string name="room70">70</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
