<!-- Krovna komponenta predstavlja tip layout-a koji se koristi -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vidovic.petar.diplomski.activity.MainActivity">

    <!-- WeekView je komponenta za kalendarski prikaz rezervacija -->
    <com.alamkanak.weekview.WeekView
        android:id="@+id/weekView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabLayout"
        app:columnGap="4dp"
        app:dayBackgroundColor="#05000000"
        app:eventTextColor="@android:color/white"
        app:headerColumnBackground="#ffffffff"
        app:headerColumnPadding="8dp"
        app:headerColumnTextColor="#8f000000"
        app:headerRowBackgroundColor="#ffefefef"
        app:headerRowPadding="12dp"
        app:hourHeight="60dp"
        app:noOfVisibleDays="3"
        app:textSize="12sp"
        app:todayBackgroundColor="@color/colorAccent"
        app:minTime="8"
        app:maxTime="22"
        app:eventCornerRadius="5dp"
        app:eventMarginVertical="0.5dp"
        app:minOverlappingMinutes="5"/>

    <!-- TabLayout je layout koji sadrzi TabItem komponente pomocu kojih se biraju sale -->
    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/tabLayout">

        <android.support.design.widget.TabItem
            android:id="@+id/room26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room26" />

        <android.support.design.widget.TabItem
            android:id="@+id/room25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room25" />

        <android.support.design.widget.TabItem
            android:id="@+id/room60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room60" />

        <android.support.design.widget.TabItem
            android:id="@+id/room26B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room26B" />

        <android.support.design.widget.TabItem
            android:id="@+id/room70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room70" />
    </android.support.design.widget.TabLayout>

    <!-- ProgressBar je komponenta kojom se oznacava da je u toku komunikacija sa serverom -->

    <RelativeLayout android:id="@+id/rl_progress_bar"
        android:layout_width="match_parent"
        android:clickable="true"
        android:layout_height="match_parent" >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="50dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>